appId: ${APP_ID}
---
- tapOn: Home
- waitForAnimationToEnd
- takeScreenshot: screen-home-${VARIANT}
- tapOn: Library
- waitForAnimationToEnd
- takeScreenshot: screen-documents-${VARIANT}
- tapOn: Study
- waitForAnimationToEnd
- takeScreenshot: screen-study-${VARIANT}
- tapOn: Chat
- waitForAnimationToEnd
- takeScreenshot: screen-chat-${VARIANT}
- tapOn: Profile
- waitForAnimationToEnd
- takeScreenshot: screen-profile-${VARIANT}
